[package]
name = "silly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
git2 = "0.20.2"
liquid = "0.26.11"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.45.1", features = ["full"] }
