[package]
name = "silly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
git2 = "0.20.2"
lazy_static = "1.5.0"
liquid = "0.26.11"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
